# shader-post-processing

./: Cargo.toml  README.md  index.html  package-lock.json
src/: camera.rs  fullscreen_effect.rs  instance.rs  lib.rs  main.rs  post_processing.rs  rectangle.rs  scene.rs  shader_globals.rs  texture.rs  vertex.rs
src/shaders/: post_processing.wgsl  post_processing_droplet.wgsl  post_processing_invert_color.wgsl  post_processing_wave_distortion.wgsl  scene.wgsl  shader.wgsl
