[package]
name = "shader-post-processing-example"
version = "0.1.0"
authors = ["xsware <https://github.com/xsware>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "shader-post-processing-example"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.21.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
cgmath = "0.18.0"
chrono = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
